# libserialport

./: .gitignore  CMakeLists.txt
cmake/: config.cmake  config.h.in  options.cmake  serialport.pc.in
cmake/lfs/: test_largefiles.c.in
include/: libserialport.h
lib/: CMakeLists.txt
man/: CMakeLists.txt  Makefile  serialport.3  serialport.3.ronn
src/: CMakeLists.txt  libserialport_internal.h
src/sysdeps/: CMakeLists.txt
src/sysdeps/freebsd/: CMakeLists.txt
src/sysdeps/macos/: CMakeLists.txt  macosx.c
test/: CMakeLists.txt
